Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9682

Assertion `0' failed in Item_cache_row::illegal_method_call on 2nd execution of PS with NULLIF

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • N/A
    • 10.1.13
    • Optimizer
    • None

    Description

      CREATE TABLE t1 (f1 INT);
      INSERT INTO t1 VALUES (1),(2);
       
      PREPARE stmt FROM "
        SELECT * FROM t1 WHERE NULLIF( ( 1, 2 ) IN ( SELECT 3, 4 ), 1 ) 
      ";
       
      EXECUTE stmt;
      EXECUTE stmt;
      

      Stack trace from bb-10.1-serg commit 2aecd1abfe5993241268219d098b6e27a3e3707a

      mysqld: /src/bb-10.1-serg/sql/item.cc:9205: void Item_cache_row::illegal_method_call(const char*): Assertion `0' failed.
      160303 21:42:16 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fd39c6061d2 in __assert_fail () from /lib64/libc.so.6
      #8  0x000055688116cd65 in Item_cache_row::illegal_method_call (this=0x7fd392c54960, method=0x556881912d00 "val_str") at /src/bb-10.1-serg/sql/item.cc:9205
      #9  0x000055688117296d in Item_cache_row::val_str (this=0x7fd392c54960) at /src/bb-10.1-serg/sql/item.h:5247
      #10 0x0000556880e52328 in Item::str_result (this=0x7fd392c54960, tmp=0x7fd392c54c70) at /src/bb-10.1-serg/sql/item.h:1040
      #11 0x000055688116c634 in Item_cache_str::cache_value (this=0x7fd392c54b80) at /src/bb-10.1-serg/sql/item.cc:9082
      #12 0x0000556881172300 in Item_cache::has_value (this=0x7fd392c54b80) at /src/bb-10.1-serg/sql/item.h:5045
      #13 0x000055688116c7a5 in Item_cache_str::val_int (this=0x7fd392c54b80) at /src/bb-10.1-serg/sql/item.cc:9113
      #14 0x0000556880e522f5 in Item::val_int_result (this=0x7fd392c54b80) at /src/bb-10.1-serg/sql/item.h:1039
      #15 0x000055688116b561 in Item_cache_int::cache_value (this=0x7fd392ae4970) at /src/bb-10.1-serg/sql/item.cc:8768
      #16 0x000055688116cc98 in Item_cache_row::cache_value (this=0x7fd392ae44e8) at /src/bb-10.1-serg/sql/item.cc:9194
      #17 0x0000556881179037 in Item_in_optimizer::val_int (this=0x7fd392ae4418) at /src/bb-10.1-serg/sql/item_cmpfunc.cc:1526
      #18 0x00005568811776ed in Arg_comparator::compare_int_signed (this=0x7fd392ae40c0) at /src/bb-10.1-serg/sql/item_cmpfunc.cc:960
      #19 0x000055688118972c in Arg_comparator::compare (this=0x7fd392ae40c0) at /src/bb-10.1-serg/sql/item_cmpfunc.h:88
      #20 0x000055688117d4a5 in Item_func_nullif::compare (this=0x7fd392ae3ff0) at /src/bb-10.1-serg/sql/item_cmpfunc.cc:2797
      #21 0x000055688117d5b5 in Item_func_nullif::int_op (this=0x7fd392ae3ff0) at /src/bb-10.1-serg/sql/item_cmpfunc.cc:2830
      #22 0x00005568811a7656 in Item_func_hybrid_field_type::val_int (this=0x7fd392ae3ff0) at /src/bb-10.1-serg/sql/item_func.cc:971
      #23 0x0000556880f5a757 in make_join_select (join=0x7fd392c527e8, select=0x7fd392c54788, cond=0x7fd392ae3ff0) at /src/bb-10.1-serg/sql/sql_select.cc:9616
      #24 0x0000556880f43a10 in JOIN::optimize_inner (this=0x7fd392c527e8) at /src/bb-10.1-serg/sql/sql_select.cc:1572
      #25 0x0000556880f41ba2 in JOIN::optimize (this=0x7fd392c527e8) at /src/bb-10.1-serg/sql/sql_select.cc:1036
      #26 0x0000556880f4a237 in mysql_select (thd=0x7fd3983c9b30, rref_pointer_array=0x7fd392ae1cd0, tables=0x7fd392ae2910, wild_num=0, fields=..., conds=0x7fd392ae3ff0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2416184064, result=0x7fd392ae4188, unit=0x7fd392ae1358, select_lex=0x7fd392ae1a58) at /src/bb-10.1-serg/sql/sql_select.cc:3437
      #27 0x0000556880f3fd6f in handle_select (thd=0x7fd3983c9b30, lex=0x7fd392ae1290, result=0x7fd392ae4188, setup_tables_done_option=0) at /src/bb-10.1-serg/sql/sql_select.cc:384
      #28 0x0000556880f1009a in execute_sqlcom_select (thd=0x7fd3983c9b30, all_tables=0x7fd392ae2910) at /src/bb-10.1-serg/sql/sql_parse.cc:5936
      #29 0x0000556880f05e76 in mysql_execute_command (thd=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_parse.cc:2962
      #30 0x0000556880f2db7d in Prepared_statement::execute (this=0x7fd392c9c070, expanded_query=0x7fd39e8d3980, open_cursor=false) at /src/bb-10.1-serg/sql/sql_prepare.cc:4265
      #31 0x0000556880f2ca18 in Prepared_statement::execute_loop (this=0x7fd392c9c070, expanded_query=0x7fd39e8d3980, open_cursor=false, packet=0x0, packet_end=0x0) at /src/bb-10.1-serg/sql/sql_prepare.cc:3897
      #32 0x0000556880f2aacc in mysql_sql_stmt_execute (thd=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_prepare.cc:3029
      #33 0x0000556880f05ea7 in mysql_execute_command (thd=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_parse.cc:2973
      #34 0x0000556880f136e2 in mysql_parse (thd=0x7fd3983c9b30, rawbuf=0x7fd392c525c8 "EXECUTE stmt", length=12, parser_state=0x7fd39e8d45e0) at /src/bb-10.1-serg/sql/sql_parse.cc:7336
      #35 0x0000556880f020dd in dispatch_command (command=COM_QUERY, thd=0x7fd3983c9b30, packet=0x7fd3975c9431 "EXECUTE stmt", packet_length=12) at /src/bb-10.1-serg/sql/sql_parse.cc:1488
      #36 0x0000556880f00e0f in do_command (thd=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_parse.cc:1109
      #37 0x0000556881036bc4 in do_handle_one_connection (thd_arg=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_connect.cc:1349
      #38 0x0000556881036928 in handle_one_connection (arg=0x7fd3983c9b30) at /src/bb-10.1-serg/sql/sql_connect.cc:1261
      #39 0x000055688173ea92 in pfs_spawn_thread (arg=0x7fd396fb0bf0) at /src/bb-10.1-serg/storage/perfschema/pfs.cc:1860
      #40 0x00007fd39e54f0a4 in start_thread () from /lib64/libpthread.so.0
      #41 0x00007fd39c6bd04d in clone () from /lib64/libc.so.6
      

      10.1 tree goes down with another assertion failure, similar to MDEV-9644.

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.